fixes bug that website is rendered very wide on safari and android

--- a/src/app.css
+++ b/src/app.css
@@ -200,8 +200,8 @@ section:before {
   position: absolute;
   top: 0;
   bottom: 0;
-  width: 10000px;
-  left: -5000px;
+  /* width: 10000px; */
+  /* left: -5000px; */
   z-index: -1;
 }
 section.blue:before {
